--- a/_posts/137438445-I-5133/2017-01-13-EnergyPlus-6a544dfc105efe000730ac5cca031b9e75c38ce6-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/137438445-I-5133/2017-01-13-EnergyPlus-6a544dfc105efe000730ac5cca031b9e75c38ce6-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-6a544dfc105efe000730ac5cca031b9e75c38ce6-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-6a544dfc105efe000730ac5cca031b9e75c38ce6-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-01-13 19:28:27'
+date: '2017-01-13 19:29:29'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.101647028
+test_time: 1.018031096
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-6a544dfc105efe000730ac5cca031b9e75c38ce6-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-13 19:28:27",
+    "date": "2017-01-13 19:29:29",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.101647028,
+    "test_time": 1.018031096,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
