--- a/_posts/134041643-FFC/2017-01-20-EnergyPlus-764d923be87d66729cb4c4bd0783f822db18d18c-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/134041643-FFC/2017-01-20-EnergyPlus-764d923be87d66729cb4c4bd0783f822db18d18c-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-764d923be87d66729cb4c4bd0783f822db18d18c-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-764d923be87d66729cb4c4bd0783f822db18d18c-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-01-20 13:10:19'
+date: '2017-01-20 13:11:12'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.098771344
+test_time: 1.013345201
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-764d923be87d66729cb4c4bd0783f822db18d18c-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-20 13:10:19",
+    "date": "2017-01-20 13:11:12",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.098771344,
+    "test_time": 1.013345201,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
