--- a/_posts/R-5797126735005-AT/2017-01-21-EnergyPlus-a6cfcf4e811cfaaee8159d66f246cb51f61c48c2-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/R-5797126735005-AT/2017-01-21-EnergyPlus-a6cfcf4e811cfaaee8159d66f246cb51f61c48c2-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-a6cfcf4e811cfaaee8159d66f246cb51f61c48c2-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-a6cfcf4e811cfaaee8159d66f246cb51f61c48c2-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-01-21 11:17:22'
+date: '2017-01-21 11:18:14'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.103558995
+test_time: 1.018012321
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-a6cfcf4e811cfaaee8159d66f246cb51f61c48c2-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-21 11:17:22",
+    "date": "2017-01-21 11:18:14",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.103558995,
+    "test_time": 1.018012321,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
