--- a/_posts/126735005-AT/2017-01-23-EnergyPlus-8b20455f2d91e3ce1f8294188bfe80e1a5f0b902-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/126735005-AT/2017-01-23-EnergyPlus-8b20455f2d91e3ce1f8294188bfe80e1a5f0b902-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-8b20455f2d91e3ce1f8294188bfe80e1a5f0b902-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-8b20455f2d91e3ce1f8294188bfe80e1a5f0b902-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-01-23 21:56:15'
+date: '2017-01-23 21:57:10'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.106423856
+test_time: 1.015449487
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-8b20455f2d91e3ce1f8294188bfe80e1a5f0b902-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-01-23 21:56:15",
+    "date": "2017-01-23 21:57:10",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.106423856,
+    "test_time": 1.015449487,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
